# Cation

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Cation.sln  README.md  Vypr.sln
Cation/: Cation.vcxproj  Cation.vcxproj.filters
Cation/Source/CLI/: Main.cpp
Cation/Source/Lexer/: CLangKeywords.cpp  CLangLexer.cpp  CLangLexer.hpp  CLangPunctuators.cpp  CLangScanner.cpp  CLangScanner.hpp  CLangToken.cpp  CLangToken.hpp  CLangTokenMap.hpp  CLangTokenType.hpp  IScanner.hpp
CationTest/: CLangLexerTest.cpp  CationTest.vcxproj  CationTest.vcxproj.filters
CationTest/Lexer/: CLangLexerTest.cpp
Vypr/: CMakeLists.txt  Vypr.vcxproj  Vypr.vcxproj.filters
Vypr/Include/Vypr/AST/: ASTContext.hpp  CompileError.hpp  SymbolTable.hpp  UnexpectedTokenException.hpp
Vypr/Include/Vypr/AST/Expression/: BinaryOp.hpp  BinaryOpNode.hpp  CastNode.hpp  ConstantNode.hpp  ExpressionNode.hpp  PostfixOp.hpp  PostfixOpNode.hpp  UnaryOp.hpp  UnaryOpNode.hpp  ValueType.hpp  VariableNode.hpp
Vypr/Include/Vypr/AST/Type/: ArrayType.hpp  FunctionDesignator.hpp  IntegralType.hpp  PointerType.hpp  RealType.hpp  StorageType.hpp  Type.hpp  TypeException.hpp
Vypr/Include/Vypr/CodeGen/: Context.hpp
Vypr/Include/Vypr/Lexer/: CLangLexer.hpp  CLangToken.hpp  CLangTokenMap.hpp  CLangTokenType.hpp
Vypr/Include/Vypr/Scanner/: Scanner.hpp  StringScanner.hpp
Vypr/Include/Vypr/Util/: Overload.hpp
Vypr/Source/AST/: CompileError.cpp  SymbolTable.cpp  UnexpectedTokenException.cpp  UnknownTokenException.cpp
Vypr/Source/AST/Expression/: BinaryOpNode.cpp  CastNode.cpp  ConstantNode.cpp  ExpressionNode.cpp  PostfixOpNode.cpp  UnaryOpNode.cpp  ValueType.cpp  VariableNode.cpp
Vypr/Source/AST/Type/: ArrayType.cpp  IntegralType.cpp  PointerType.cpp  RealType.cpp  StorageType.cpp
Vypr/Source/CLI/: Main.cpp
Vypr/Source/CodeGen/: Context.cpp
Vypr/Source/Lexer/: CLangKeywords.cpp  CLangLexer.cpp  CLangPunctuators.cpp  CLangTypePrefixes.cpp
Vypr/Source/Scanner/: Scanner.cpp  StringScanner.cpp
VyprTest/: CMakeLists.txt  VyprTest.vcxproj
VyprTest/AST/Expression/: CastNodeTest.cpp  ConstantNodeTest.cpp  VariableNodeTest.cpp
VyprTest/AST/Type/: IntegralTypeTest.cpp  PointerTypeTest.cpp  StorageTypeTest.cpp
VyprTest/Lexer/: CLangLexerTest.cpp
VyprTest/Scanner/: StringScannerTest.cpp
examples/: testA.c
